--- a/app/templates/data/add_entry.html
+++ b/app/templates/data/add_entry.html
@@ -4,20 +4,18 @@
     <h1 class="text-2xl font-bold mb-4">Add New Entry to {{ table_name }}</h1>
     <form method="POST">
         {% for column in columns %}
-        {% if column.name not in ['id', 'created_at', 'updated_at'] %}
         <div class="mb-4">
             <label for="{{ column.name }}" class="block text-gray-700 text-sm font-bold mb-2">{{ column.name }}</label>
             <input type="text" id="{{ column.name }}" name="{{ column.name }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
         </div>
-        {% endif %}
         {% endfor %}
         {% if not is_independent %}
         <div class="mb-4">
-            <label for="core_uuid" class="block text-gray-700 text-sm font-bold mb-2">Core Entry</label>
-            <select id="core_uuid" name="core_uuid" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            <label for="core_id" class="block text-gray-700 text-sm font-bold mb-2">Core Entry</label>
+            <select id="core_id" name="core_id" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                 <option value="">Select Core Entry</option>
                 {% for core_entry in core_entries %}
-                <option value="{{ core_entry.uuid }}">{{ core_entry.name }}</option>
+                <option value="{{ core_entry.id }}">{{ core_entry.name }} - {{ core_entry.description }}</option>
                 {% endfor %}
             </select>
         </div>
